[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/TelaInicial/logonew.png" type="Texture" id=1]
[ext_resource path="res://Assets/TelaInicial/Space Background (5).png" type="Texture" id=2]
[ext_resource path="res://Scenes/SpaceShipExterior/spaceShipExterior.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HomeScreen/homeScreen.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/iniciar-button-hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/TelaInicial/logoRainbowDev.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/iniciar-button.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/sair-button-hover.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/saiba-mais-button.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/saiba-mais-button-hover.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/sair-button.png" type="Texture" id=11]
[ext_resource path="res://Assets/Music and Sounds/StartMusic.mp3" type="AudioStream" id=12]
[ext_resource path="res://Assets/Planet/planet3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Music and Sounds/ButtonAudio.mp3" type="AudioStream" id=14]

[sub_resource type="Animation" id=202]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpaceShipExterior:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -57, -9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpaceShipExterior:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=203]
resource_name = "spaceship"
length = 42.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpaceShipExterior:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 13.1, 20, 32.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -55, 76 ), Vector2( 347, 36 ), Vector2( 341, 105 ), Vector2( -12, 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpaceShipExterior:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 13.1, 32.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 0.0 ]
}

[node name="Tela Inicial 1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 320, 180 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spaceship"
anims/RESET = SubResource( 202 )
anims/spaceship = SubResource( 203 )

[node name="SpaceShipExterior" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.678431, 0.678431, 0.678431, 1 )
position = Vector2( -57, -9 )
scale = Vector2( 0.08, 0.08 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 167, 39 )
scale = Vector2( 0.61811, 0.634615 )
texture = ExtResource( 1 )

[node name="StartBtn" type="TextureButton" parent="."]
margin_left = 3.0
margin_top = 68.0
margin_right = 86.0
margin_bottom = 89.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="StartBtn"]
stream = ExtResource( 14 )

[node name="QuitBtn" type="TextureButton" parent="."]
margin_left = 3.0
margin_top = 91.0
margin_right = 80.0
margin_bottom = 111.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credit" type="TextureButton" parent="."]
margin_left = 257.0
margin_top = 152.0
margin_right = 309.0
margin_bottom = 172.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="Sprite" parent="."]
position = Vector2( 162, 195 )
scale = Vector2( 0.17402, 0.169758 )
texture = ExtResource( 13 )

[node name="Logo2" type="Sprite" parent="."]
position = Vector2( 282, 137 )
scale = Vector2( 0.264113, 0.306583 )
texture = ExtResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[connection signal="pressed" from="StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Credit" to="." method="_on_Credito_pressed"]
